RESOLVED FIXED212520
REGRESSION(r262184): fast/forms/implicit-submission.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=212520
Summary REGRESSION(r262184): fast/forms/implicit-submission.html is crashing
Diego Pino
Reported 2020-05-29 05:03:50 PDT
The test is crashing since r262184. fast/forms/implicit-submission.html [ Crash ] Crash-log: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r262287%20(13890)/fast/forms/implicit-submission-crash-log.txt Thread 1 (Thread 0x7f0d6346c9c0 (LWP 53039)): #0 0x00007f0d6fb05ee5 in _g_log_abort (breakpoint=1) at ../glib/gmessages.c:554 #1 0x00007f0d6fb071c9 in g_logv (log_domain=0x7f0d64de5133 "Gtk", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7ffcec644fa0) at ../glib/gmessages.c:1373 #2 0x00007f0d6fb07393 in g_log (log_domain=log_domain@entry=0x7f0d64de5133 "Gtk", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f0d6fb5877f "%s: assertion '%s' failed") at ../glib/gmess #3 0x00007f0d6fb07b8d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7f0d64de5133 "Gtk", pretty_function=pretty_function@entry=0x7f0d64e5c910 <__func__.74601> "gtk_tree_view_get_selection", expressi #4 0x00007f0d64cf106a in gtk_tree_view_get_selection (tree_view=<optimized out>) at ../gtk/gtktreeview.c:11628 #5 0x00007f0d64cf106a in gtk_tree_view_get_selection (tree_view=<optimized out>) at ../gtk/gtktreeview.c:11626 #6 0x00007f0d6c2d51f8 in WebKit::WebPopupMenuProxyGtk::activateSelectedItem() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #7 0x00007f0d6c2308c0 in webkitWebViewBaseSynthesizeKeyEvent(_WebKitWebViewBase*, unsigned int, unsigned int) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #8 0x00005606b41f47c1 in WTR::TestController::didReceiveKeyDownMessageFromInjectedBundle(OpaqueWKDictionary const*, bool) () #9 0x00005606b41f4f80 in WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle(OpaqueWKString const*, void const*, OpaqueWKMessageListener const*) () #10 0x00007f0d6c0fa96a in WebKit::WebPageInjectedBundleClient::didReceiveSynchronousMessageFromInjectedBundle(WebKit::WebPageProxy*, WTF::String const&, API::Object*, WTF::CompletionHandler<void (WTF::RefPtr<API #11 0x00007f0d6c15c82e in WebKit::WebPageProxy::handleSynchronousMessage(IPC::Connection&, WTF::String const&, WebKit::UserData const&, WTF::CompletionHandler<void (WebKit::UserData&&)>&&) () at /app/webkit/WebK #12 0x00007f0d6bdbb275 in void IPC::handleMessageSynchronousWantsConnection<Messages::WebPageProxy::HandleSynchronousMessage, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::String co #13 0x00007f0d6bd9bee5 in WebKit::WebPageProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, std::unique_ptr<IPC::Encoder, std::default_delete<IPC::Encoder> >&) () at /app/webkit/WebKitBuild/Release/li #14 0x00007f0d6c02394b in IPC::MessageReceiverMap::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, std::unique_ptr<IPC::Encoder, std::default_delete<IPC::Encoder> >&) () at /app/webkit/WebKitBuild/Release/l #15 0x00007f0d6c10ff10 in non-virtual thunk to WebKit::WebProcessProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, std::unique_ptr<IPC::Encoder, std::default_delete<IPC::Encoder> >&) () at /app/webki #16 0x00007f0d6c01dc8d in IPC::Connection::dispatchSyncMessage(IPC::Decoder&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #17 0x00007f0d6c01dd46 in IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #18 0x00007f0d6c01e1ae in IPC::Connection::SyncMessageState::dispatchMessagesAndResetDidScheduleDispatchMessagesForConnection(IPC::Connection&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #19 0x00007f0d69afe7a9 in WTF::RunLoop::performWork() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #20 0x00007f0d69b63529 in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #21 0x00007f0d6faffc3e in g_main_dispatch (context=0x5606b5886fe0) at ../glib/gmain.c:3309 #22 0x00007f0d6faffc3e in g_main_context_dispatch (context=context@entry=0x5606b5886fe0) at ../glib/gmain.c:3974 #23 0x00007f0d6faffff0 in g_main_context_iterate (context=0x5606b5886fe0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4047 #24 0x00007f0d6fb002e3 in g_main_loop_run (loop=0x5606b5dc3c30) at ../glib/gmain.c:4241 #25 0x00007f0d69b64030 in WTF::RunLoop::run() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #26 0x00005606b422cf31 in WTR::TestController::platformRunUntil(bool&, WTF::Seconds) () #27 0x00005606b4213a41 in WTR::TestInvocation::invoke() () #28 0x00005606b4200d62 in WTR::TestController::runTest(char const*) () #29 0x00005606b42018bf in WTR::TestController::runTestingServerLoop() () #30 0x00005606b4201c68 in WTR::TestController::TestController(int, char const**) () #31 0x00005606b41ead86 in main () STDERR: STDERR: warning: core file may not match specified executable file. STDERR: STDERR: (WebKitTestRunner:53039): GLib-GObject-WARNING **: 03:40:07.363: invalid unclassed pointer in cast to 'GtkTreeView' STDERR: STDERR: (WebKitTestRunner:53039): Gtk-CRITICAL **: 03:40:07.363: gtk_tree_view_get_selection: assertion 'GTK_IS_TREE_VIEW (tree_view)' failed
Attachments
Patch (1.32 KB, patch)
2020-05-30 06:23 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-05-30 06:23:30 PDT
Carlos Garcia Campos
Comment 2 2020-06-01 02:21:13 PDT
Radar WebKit Bug Importer
Comment 3 2020-06-01 02:22:18 PDT
Note You need to log in before you can comment on or make changes to this bug.