REGRESSION(r262184): fast/forms/implicit-submission.html is crashing https://bugs.webkit.org/show_bug.cgi?id=212520

Reviewed by Adrian Perez de Castro.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::activateSelectedItem): Return early if the popup has already been closed.

Canonical link: https://commits.webkit.org/225418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262370 268f45cc-cd09-0410-ab3c-d52691b4dbfc